NamDD.SP/hot-fix/fix-style-ourprojects fix style of text in triangle and fix gap content

--- a/src/app/assets/styles/our-projects.scss
+++ b/src/app/assets/styles/our-projects.scss
@@ -20,11 +20,14 @@
           transform-origin: left;
           p {
             @apply absolute left-2 bottom-2 text-[14px];
+            font-family: Play;
           }
         }
         .video-bunny {
           @apply w-full h-full;
-          clip-path: path("M24 0H880C893.255 0 904 10.7452 904 24V472C904 485.255 893.255 496 880 496L157.295 496C151.512 496 145.924 493.912 141.558 490.121L8.26358 374.366C3.01455 369.808 0 363.197 0 356.245V24C0 10.7452 10.7452 0 24 0Z");
+          clip-path: path(
+            "M24 0H880C893.255 0 904 10.7452 904 24V472C904 485.255 893.255 496 880 496L157.295 496C151.512 496 145.924 493.912 141.558 490.121L8.26358 374.366C3.01455 369.808 0 363.197 0 356.245V24C0 10.7452 10.7452 0 24 0Z"
+          );
           video {
             @apply w-full h-full object-cover rounded-[24px];
           }
@@ -127,8 +130,10 @@
       .group-img {
         @apply xl:basis-[72%] lg:basis-[65%] md:basis-2/3 relative;
         .social-network {
-          @apply w-full h-full ;
-          clip-path: path("M24 0H880C893.255 0 904 10.7452 904 24V472C904 485.255 893.255 496 880 496L157.295 496C151.512 496 145.924 493.912 141.558 490.121L8.26358 374.366C3.01455 369.808 0 363.197 0 356.245V24C0 10.7452 10.7452 0 24 0Z");
+          @apply w-full h-full;
+          clip-path: path(
+            "M24 0H880C893.255 0 904 10.7452 904 24V472C904 485.255 893.255 496 880 496L157.295 496C151.512 496 145.924 493.912 141.558 490.121L8.26358 374.366C3.01455 369.808 0 363.197 0 356.245V24C0 10.7452 10.7452 0 24 0Z"
+          );
           img {
             @apply w-full h-full object-cover rounded-[24px];
           }
@@ -137,6 +142,7 @@
           @apply absolute bottom-0 left-0;
           p {
             @apply absolute left-2 bottom-2 text-[14px];
+            font-family: Play;
           }
         }
       }
@@ -152,7 +158,8 @@
           z-index: 10;
         }
         .group-2 {
-          @apply flex w-full flex-col gap-6 items-end;
+          @apply flex w-full flex-col items-end;
+          gap: 24px;
           z-index: 10;
           .content-1 {
             @apply xl:text-[48px] lg:text-[45px] md:text-[38px];
@@ -199,7 +206,7 @@
         .group-3 {
           @apply flex flex-col gap-2 w-full items-end lg:right-[20px] lg:bottom-[94px] md:right-2 md:bottom-20 z-10;
           a {
-            @apply lg:text-[16px] md:text-[14px] lg:w-[206px] md:w-[145px] lg:py-1.5 lg:px-6 md:px-2 md:py-1;
+            @apply lg:text-[16px] md:text-[14px] lg:w-[171px] md:w-[145px] lg:py-1.5 lg:px-4 md:px-2 md:py-1;
             display: flex;
             justify-content: center;
             align-items: end;
